# hackathon-opencv

./: .gitignore  CMakeLists.txt
src/: main.cpp
